# graphics_seminar

./: CMakeLists.txt  main.cpp  shader.h  util.h
include/: shader.h
shaders/: fragment.glsl  vertex.glsl
